--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -3,6 +3,10 @@
 .navbar {
     background-color: #333;
     padding: 1rem;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
   }
   
   .navbarNav {
